# voice-input

./: .gitignore  .gitmodules  LICENSE  README.md  README.zh.md  USAGE.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  task.yml
.github/workflows/: ci.yml  claude.yml  pr-agent.yml  release-tauri.yml
Casks/: openless.rb
Examples/: polish-reference-examples.sample.jsonl
docs/: qwen-asr-submodule-upgrade-checklist.md  tauri-csp.md  volcengine-setup.md  windows-sherpa-onnx-asr-plan.md
docs/codex/: openless-base-decision.md  voice-input-adaptation.md
docs/superpowers/plans/: 2026-06-11-macos-voice-input-implementation.md
docs/superpowers/specs/: 2026-06-11-macos-voice-input-design.md
openless-all/: README.md
openless-all/app/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
openless-all/app/scripts/: aura-skin-contract.test.mjs  build-mac.sh  check-hotkey-injection.mjs  check-hotkey-recorder.mjs  check-window-hotkey-fallback.mjs  macos-capsule-spaces-contract.test.mjs  windows-build-gnu.ps1  windows-capsule-lifecycle-smoke.ps1  windows-capsule-watch.ps1  windows-clipboard-consumer-timing-smoke.ps1  windows-cold-start.ps1  windows-hotkey-injection-smoke.ps1  windows-hotkey-os-hook-smoke.ps1  windows-ime-build.ps1  windows-ime-install-smoke.ps1  windows-ime-register.ps1  windows-ime-unregister.ps1  windows-microphone-privacy-smoke.ps1  windows-open-dev.ps1  windows-openless-lifecycle-e2e.py  windows-package-msvc.cmd  windows-package-msvc.ps1  windows-package-msvc.test.mjs  windows-preflight.ps1  windows-real-asr-insertion-smoke.ps1  windows-real-regression.ps1  windows-startup-lifecycle-contract.test.mjs  windows-terminal-clipboard-restore-smoke.ps1  write-updater-manifest.mjs
openless-all/app/src/: App.tsx  main.tsx
openless-all/app/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.linux.conf.json
openless-all/app/src-tauri/backend-tests/: Cargo.toml
openless-all/app/src-tauri/backend-tests/tests/: backend_rust.rs
openless-all/app/src-tauri/capabilities/: default.json
openless-all/app/src-tauri/icons/: icon.icns
openless-all/app/src-tauri/nsis/: openless-ime-hooks.nsh
openless-all/app/src-tauri/src/: audio_mute.rs  cli.rs  combo_hotkey.rs  coordinator.rs  coordinator_state.rs  correction.rs  global_hotkey_runtime.rs  hotkey.rs  insertion.rs  lib.rs  linux_fcitx.rs  llm_gemini.rs  main.rs  net.rs  permissions.rs  persistence.rs  polish.rs  qa_hotkey.rs  recorder.rs  selection.rs  shortcut_binding.rs  types.rs  unicode_keystroke.rs  windows_ime_ipc.rs  windows_ime_profile.rs  windows_ime_protocol.rs  windows_ime_session.rs
openless-all/app/src-tauri/src/asr/: bailian.rs  frame.rs  mimo.rs  mod.rs  pcm.rs  volcengine.rs  wav.rs  whisper.rs
openless-all/app/src-tauri/src/asr/local/: apple_speech_provider.rs  cache.rs  download.rs  foundry.rs  foundry_native.rs  foundry_provider.rs  foundry_runtime.rs  local_provider.rs  mod.rs  models.rs  qwen_engine.rs  qwen_ffi.rs  sherpa.rs  sherpa_download.rs  sherpa_provider.rs  sherpa_runtime.rs  test_run.rs
openless-all/app/src-tauri/src/coding_agent/: args.rs  commands.rs  detect.rs  guard.rs  mod.rs  stream.rs
openless-all/app/src-tauri/src/commands/: credentials.rs  dictation.rs  dictionary.rs  foundry_asr.rs  github_oauth.rs  history.rs  hotkeys.rs  local_asr.rs  marketplace.rs  misc.rs  mod.rs  permissions_cmds.rs  providers.rs  qa.rs  remote_input.rs  settings.rs  sherpa_asr.rs  style_packs.rs
openless-all/app/src-tauri/src/coordinator/: asr_setup.rs  capsule.rs  dictation.rs  dictation_end.rs  dictation_session.rs  dictation_streaming.rs  dictation_voice_agent.rs  hotkey_supervisors.rs  ime_insertion.rs  llm_pipeline.rs  qa.rs  qa_session.rs  resources.rs  tests.rs  voice_agent_hotkeys.rs
openless-all/app/src-tauri/src/remote_server/: mod.rs
openless-all/app/src-tauri/src/remote_server/assets/: app.js  index.html  style.css
openless-all/app/src-tauri/wix/: openless-ime.wxs
openless-all/app/src/components/: AudioCue.tsx  AutoUpdate.tsx  AutoUpdateGate.tsx  Capsule.tsx  FloatingShell.tsx  GithubLoginModal.tsx  Icon.tsx  MarketplaceModal.tsx  Onboarding.tsx  SavedToast.tsx  SettingsModal.tsx  ShortcutRecorder.tsx  WindowChrome.tsx
openless-all/app/src/components/ui/: Modal.tsx  Row.tsx  SegSimple.tsx  SelectLite.tsx  SwitchLite.tsx
openless-all/app/src/i18n/: en.ts  index.ts  ja.ts  ko.ts  zh-CN.ts  zh-TW.ts
openless-all/app/src/lib/: appVersion.ts  audioCue.test.ts  audioCue.ts  capsuleLayout.ts  fontScale.ts  hotkey.ts  hotkeyMigration.ts  hotkeyRecorder.test.ts  hotkeyRecorder.ts  ipc.ts  localAsr.ts  mockData.ts  providerSetup.test.ts  providerSetup.ts  qaMarkdown.test.ts  qaMarkdown.ts  savedEvent.ts  stylePrefs.test.ts  stylePrefs.ts  types.ts  vocab-presets.json  vocabPresets.ts  windowHotkeyFallback.test.ts  windowHotkeyFallback.ts
openless-all/app/src/pages/: History.tsx  LessComputerGlow.tsx  LessComputerPanel.tsx  LocalAsr.tsx  Marketplace.tsx  Overview.tsx  QaPanel.tsx  SelectionAsk.tsx  Style.tsx  Translation.tsx  Vocab.tsx  _atoms.tsx
openless-all/app/src/pages/settings/: AboutSection.tsx  BetaChannelSection.tsx  (+16 more)
openless-all/app/src/state/: HotkeySettingsContext.tsx  useAppState.ts
openless-all/app/src/styles/: global.css  tokens.css
openless-all/app/src/types/: tauri-plugin-autostart.d.ts
openless-all/app/windows-ime/: OpenLessIme.sln
openless-all/app/windows-ime/src/: OpenLessIme.def  class_factory.cpp  class_factory.h  edit_session.cpp  edit_session.h  guids.h  ipc_client.cpp  ipc_client.h  registry.cpp  registry.h  resource.rc  text_service.cpp  text_service.h
openless-all/design_handoff_openless/: App.html  OpenLess Redesign.html  OpenLess.standalone.html  README.md  capsule.jsx  chrome.jsx  data.js  icons.jsx  pages.jsx  tokens.css  variants.jsx
openless-all/scripts/: inject-fcitx5-plugin.sh
openless-all/scripts/linux-fcitx5-plugin/: CMakeLists.txt  build.sh  openless.conf.in  openless.cpp
scripts/: audit-system-level.sh  finding-helper.sh
