[package]
name = "openless-backend-tests"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
publish = false

[[test]]
name = "backend_rust"
path = "tests/backend_rust.rs"

[dependencies]
arboard = "3"
cpal = "0.15"
enigo = "0.2"
global-hotkey = "0.6"
log = "0.4"
once_cell = "1"
parking_lot = "0.12"
rdev = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
